Add avatar image to the root div in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>Sumit Moharana Portfolio</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <img src="/avatar.png" width="100" />
+
+    </div>
   </body>
 </html>
