Refactor ExperienceSection component for improved layout and avatar display; remove commented-out navigation in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,18 @@
   </head>
   <body>
     <div id="root">
-      <img src="/avatar.png" width="100" />
+      <!-- <img src="/avatar.png" width="100" />
+      <nav className="bg-black text-yellow-400 py-4 shadow-md">
+  <ul className="flex justify-center space-x-10 text-lg font-semibold">
+    <li><a href="#about" className="hover:text-yellow-300">About</a></li>
+    <li><a href="#skills" className="hover:text-yellow-300">Skills</a></li>
+    <li><a href="#experience" className="hover:text-yellow-300">Experience</a></li>
+    <li><a href="#projects" className="hover:text-yellow-300">Projects</a></li>
+    <li><a href="#certification" className="hover:text-yellow-300">Certification</a></li>
+    <li><a href="#contact" className="hover:text-yellow-300">Contact</a></li>
+  </ul>
+</nav> -->
+
 
     </div>
   </body>
